--- a/Programming-Hero-Assignment-1/Code/index.html
+++ b/Programming-Hero-Assignment-1/Code/index.html
@@ -49,47 +49,83 @@
           A private space to store notes, links, and learning summaries. It
           helps you think clearly and remember things better.
         </p>
+        <div class="hero-buttons">
+          <button class="btn-green">
+            Start Building Your Vault
 
-        <button class="btn-green">
-          Start Building Your Vault
+            <svg
+              viewBox="0 0 15.6277 13.129"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              width="15.627686"
+              height="13.129028"
+              fill="none"
+              customFrame="#000000"
+            >
+              <path
+                id="Vector"
+                d="M15.3508 7.22897L9.72578 12.854C9.54966 13.0301 9.31079 13.129 9.06172 13.129C8.81265 13.129 8.57378 13.0301 8.39766 12.854C8.22154 12.6778 8.12259 12.439 8.12259 12.1899C8.12259 11.9408 8.22154 11.702 8.39766 11.5258L12.4219 7.50319L0.9375 7.50319C0.68886 7.50319 0.450403 7.40442 0.274587 7.2286C0.0987721 7.05279 0 6.81433 0 6.56569C0 6.31705 0.0987721 6.07859 0.274587 5.90278C0.450403 5.72696 0.68886 5.62819 0.9375 5.62819L12.4219 5.62819L8.39922 1.60319C8.2231 1.42707 8.12416 1.1882 8.12416 0.939126C8.12416 0.690054 8.2231 0.451184 8.39922 0.275064C8.57534 0.0989432 8.81421 2.6244e-09 9.06328 0C9.31235 -2.6244e-09 9.55122 0.0989432 9.72734 0.275064L15.3523 5.90006C15.4398 5.98728 15.5091 6.0909 15.5563 6.20498C15.6036 6.31907 15.6278 6.44136 15.6277 6.56484C15.6275 6.68832 15.603 6.81056 15.5555 6.92453C15.508 7.0385 15.4384 7.14196 15.3508 7.22897Z"
+                fill="rgb(255,255,255)"
+                fill-rule="nonzero"
+              />
+            </svg>
+          </button>
+          <button class="btn-border">
+            <svg
+              viewBox="0 0 14.3754 16.8724"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              width="14.375366"
+              height="16.872375"
+              fill="none"
+              customFrame="#000000"
+            >
+              <path
+                id="Vector"
+                d="M13.632 7.11352L2.37578 0.228367C2.13972 0.0844594 1.86971 0.00576102 1.5933 0.000304436C1.31689 -0.00515215 1.04398 0.0628285 0.802422 0.197308C0.560867 0.331787 0.359319 0.527949 0.218348 0.765773C0.0773768 1.0036 0.0020307 1.27457 0 1.55102L0 15.3213C0.0020307 15.5978 0.0773768 15.8688 0.218348 16.1066C0.359319 16.3444 0.560867 16.5406 0.802422 16.6751C1.04398 16.8095 1.31689 16.8775 1.5933 16.8721C1.86971 16.8666 2.13972 16.7879 2.37578 16.644L13.632 9.75884C13.859 9.62067 14.0466 9.42643 14.1768 9.19478C14.307 8.96314 14.3753 8.7019 14.3753 8.43618C14.3753 8.17046 14.307 7.90922 14.1768 7.67758C14.0466 7.44593 13.859 7.25169 13.632 7.11352ZM1.875 14.7526L1.875 2.11977L12.2 8.43618L1.875 14.7526Z"
+                fill="rgb(255,255,255)"
+                fill-rule="nonzero"
+              />
+            </svg>
 
-          <svg
-            viewBox="0 0 15.6277 13.129"
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-            width="15.627686"
-            height="13.129028"
-            fill="none"
-            customFrame="#000000"
-          >
-            <path
-              id="Vector"
-              d="M15.3508 7.22897L9.72578 12.854C9.54966 13.0301 9.31079 13.129 9.06172 13.129C8.81265 13.129 8.57378 13.0301 8.39766 12.854C8.22154 12.6778 8.12259 12.439 8.12259 12.1899C8.12259 11.9408 8.22154 11.702 8.39766 11.5258L12.4219 7.50319L0.9375 7.50319C0.68886 7.50319 0.450403 7.40442 0.274587 7.2286C0.0987721 7.05279 0 6.81433 0 6.56569C0 6.31705 0.0987721 6.07859 0.274587 5.90278C0.450403 5.72696 0.68886 5.62819 0.9375 5.62819L12.4219 5.62819L8.39922 1.60319C8.2231 1.42707 8.12416 1.1882 8.12416 0.939126C8.12416 0.690054 8.2231 0.451184 8.39922 0.275064C8.57534 0.0989432 8.81421 2.6244e-09 9.06328 0C9.31235 -2.6244e-09 9.55122 0.0989432 9.72734 0.275064L15.3523 5.90006C15.4398 5.98728 15.5091 6.0909 15.5563 6.20498C15.6036 6.31907 15.6278 6.44136 15.6277 6.56484C15.6275 6.68832 15.603 6.81056 15.5555 6.92453C15.508 7.0385 15.4384 7.14196 15.3508 7.22897Z"
-              fill="rgb(255,255,255)"
-              fill-rule="nonzero"
-            />
-          </svg>
-        </button>
-        <button class="btn-border">
-          <svg
-            viewBox="0 0 14.3754 16.8724"
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-            width="14.375366"
-            height="16.872375"
-            fill="none"
-            customFrame="#000000"
-          >
-            <path
-              id="Vector"
-              d="M13.632 7.11352L2.37578 0.228367C2.13972 0.0844594 1.86971 0.00576102 1.5933 0.000304436C1.31689 -0.00515215 1.04398 0.0628285 0.802422 0.197308C0.560867 0.331787 0.359319 0.527949 0.218348 0.765773C0.0773768 1.0036 0.0020307 1.27457 0 1.55102L0 15.3213C0.0020307 15.5978 0.0773768 15.8688 0.218348 16.1066C0.359319 16.3444 0.560867 16.5406 0.802422 16.6751C1.04398 16.8095 1.31689 16.8775 1.5933 16.8721C1.86971 16.8666 2.13972 16.7879 2.37578 16.644L13.632 9.75884C13.859 9.62067 14.0466 9.42643 14.1768 9.19478C14.307 8.96314 14.3753 8.7019 14.3753 8.43618C14.3753 8.17046 14.307 7.90922 14.1768 7.67758C14.0466 7.44593 13.859 7.25169 13.632 7.11352ZM1.875 14.7526L1.875 2.11977L12.2 8.43618L1.875 14.7526Z"
-              fill="rgb(255,255,255)"
-              fill-rule="nonzero"
-            />
-          </svg>
+            See How It Works
+          </button>
+        </div>
+      </div>
+    </section>
+    <section class="notes-section">
+      <h2>Notes Don't Fail, Structure Does.</h2>
+      <p class="note-des">
+        You're not bad at learning. Your tools just weren't built for how
+        knowledge actually works.
+      </p>
 
-          See How It Works
-        </button>
+      <div class="cards">
+        <div class="card">
+          <div class="icon"><img src="assets/Vector.png" alt="1st card" /></div>
+          <h3>Scattered Notes</h3>
+          <p>Your ideas live in different apps, none of them connected.</p>
+        </div>
+
+        <div class="card">
+          <div class="icon">
+            <img src="assets/Bookmarks.png" alt="2nd card" />
+          </div>
+          <h3>Bookmark Overload</h3>
+          <p>Hundreds of saved links you'll never revisit.</p>
+        </div>
+
+        <div class="card">
+          <div class="icon"><img src="assets/Brain.png" alt="3rd card" /></div>
+          <h3>No Idea Connections</h3>
+          <p>Insights stay isolated, never building understanding.</p>
+        </div>
+
+        <div class="card">
+          <div class="icon"><img src="assets/Info.png" alt="4th card" /></div>
+          <h3>Forgetting What You Learned</h3>
+          <p>Knowledge fades because there's no system.</p>
+        </div>
       </div>
     </section>
   </body>
