Assignment all section and footer Push With Button Hover Effect

--- a/Programming-Hero-Assignment-1/Code/index.html
+++ b/Programming-Hero-Assignment-1/Code/index.html
@@ -46,8 +46,10 @@
         </h1>
 
         <p class="text">
-          A private space to store notes, links, and learning summaries. It
-          helps you think clearly and remember things better.
+          A private space to store notes, links, and learning summaries —
+          designed to <br />
+          help you think clearly, connect ideas, and turn learning into
+          long-term knowledge.
         </p>
         <div class="hero-buttons">
           <button class="btn-green">
@@ -104,7 +106,7 @@
         <div class="card">
           <div class="icon"><img src="assets/Vector.png" alt="1st card" /></div>
           <h3>Scattered Notes</h3>
-          <p>Your ideas live in different apps, none of them connected.</p>
+          <p>Your ideas live in 10 different apps, none of them connected.</p>
         </div>
 
         <div class="card">
@@ -112,19 +114,21 @@
             <img src="assets/Bookmarks.png" alt="2nd card" />
           </div>
           <h3>Bookmark Overload</h3>
-          <p>Hundreds of saved links you'll never revisit.</p>
+          <p>Hundreds of saved links you'll never revisit or remember.</p>
         </div>
 
         <div class="card">
           <div class="icon"><img src="assets/Brain.png" alt="3rd card" /></div>
           <h3>No Idea Connections</h3>
-          <p>Insights stay isolated, never building understanding.</p>
+          <p>
+            Insights stay isolated, never building into bigger understanding.
+          </p>
         </div>
 
         <div class="card">
           <div class="icon"><img src="assets/Info.png" alt="4th card" /></div>
           <h3>Forgetting What You Learned</h3>
-          <p>Knowledge fades because there's no system.</p>
+          <p>Knowledge fades because there's no system to retain it.</p>
         </div>
       </div>
     </section>
@@ -229,5 +233,110 @@
         </div>
       </div>
     </section>
+    <section class="getaccess">
+      <div class="getaccess-box">
+        <h1>Ready To Think More Clearly?</h1>
+
+        <p class="subtitle">
+          Join thousands of learners who are building their personal knowledge
+          vaults.
+          <br />
+          Start free, no credit card required.
+        </p>
+
+        <button class="getaccess-btn">
+          Get Early Access
+          <svg
+            viewBox="0 0 15.6277 13.1292"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            width="15.627686"
+            height="13.129150"
+            fill="none"
+            customFrame="#000000"
+          >
+            <path
+              id="Vector"
+              d="M15.3508 7.22897L9.72578 12.854C9.54966 13.0301 9.31079 13.129 9.06172 13.129C8.81265 13.129 8.57378 13.0301 8.39766 12.854C8.22154 12.6778 8.12259 12.439 8.12259 12.1899C8.12259 11.9408 8.22154 11.702 8.39766 11.5258L12.4219 7.50319L0.9375 7.50319C0.68886 7.50319 0.450403 7.40442 0.274587 7.2286C0.0987721 7.05279 0 6.81433 0 6.56569C0 6.31705 0.0987721 6.07859 0.274587 5.90278C0.450403 5.72696 0.68886 5.62819 0.9375 5.62819L12.4219 5.62819L8.39922 1.60319C8.2231 1.42707 8.12416 1.1882 8.12416 0.939126C8.12416 0.690054 8.2231 0.451184 8.39922 0.275064C8.57534 0.0989432 8.81421 2.6244e-09 9.06328 0C9.31235 -2.6244e-09 9.55122 0.0989432 9.72734 0.275064L15.3523 5.90006C15.4398 5.98728 15.5091 6.0909 15.5563 6.20498C15.6036 6.31907 15.6278 6.44136 15.6277 6.56484C15.6275 6.68832 15.603 6.81056 15.5555 6.92453C15.508 7.0385 15.4384 7.14196 15.3508 7.22897Z"
+              fill="rgb(255,255,255)"
+              fill-rule="nonzero"
+            />
+          </svg>
+        </button>
+
+        <p class="note">Free during early access • No credit card needed</p>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="footer-top">
+        <div class="footer-logo">
+          <img src="assets/logo-footer.png" alt="footerlogo" />
+        </div>
+        <div class="footer-social">
+          <p>Social Links</p>
+          <div class="icons">
+            <a class="twitter" href="#"
+              ><svg
+                viewBox="0 0 11.4993 11.752"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="11.499268"
+                height="11.751953"
+                fill="none"
+                customFrame="#000000"
+              >
+                <path
+                  id="Vector"
+                  d="M6.84365 4.97617L11.1245 0L10.1101 0L6.39301 4.32075L3.42419 0L0 0L4.48944 6.53373L0 11.752L1.01449 11.752L4.93984 7.18916L8.07513 11.752L11.4993 11.752L6.84339 4.97617L6.84365 4.97617ZM1.38002 0.7637L2.93821 0.7637L10.1106 11.023L8.55237 11.023L1.38002 0.7637Z"
+                  fill="rgb(0,0,0)"
+                  fill-rule="nonzero"
+                />
+              </svg>
+            </a>
+            <a class="linkdin" href="#"
+              ><svg
+                viewBox="0 0 11.1498 10.6545"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="11.149780"
+                height="10.654541"
+                fill="none"
+                customFrame="#000000"
+              >
+                <path
+                  id="Vector"
+                  d="M11.1498 6.53178L11.1498 10.6546L8.75949 10.6546L8.75949 6.80809C8.75949 5.84228 8.41438 5.18272 7.54893 5.18272C6.88848 5.18272 6.49613 5.62676 6.32286 6.05672C6.25994 6.21038 6.24372 6.42376 6.24372 6.63927L6.24372 10.6544L3.85326 10.6544C3.85326 10.6544 3.88534 4.13972 3.85326 3.46536L6.24389 3.46536L6.24389 4.48412C6.23908 4.49214 6.23231 4.49998 6.22803 4.50765L6.24389 4.50765L6.24389 4.48412C6.56155 3.99533 7.12806 3.29655 8.39816 3.29655C9.97077 3.29655 11.1498 4.32404 11.1498 6.53178ZM1.35263 0C0.534956 0 0 0.536739 0 1.24193C0 1.93215 0.519448 2.4844 1.32126 2.4844L1.33677 2.4844C2.17049 2.4844 2.68887 1.93215 2.68887 1.24193C2.673 0.536739 2.17049 0 1.35263 0ZM0.142073 10.6546L2.53164 10.6546L2.53164 3.46536L0.142073 3.46536L0.142073 10.6546Z"
+                  fill="rgb(0,0,0)"
+                  fill-rule="nonzero"
+                />
+              </svg>
+            </a>
+            <a class="facebook" href="#"
+              ><svg
+                viewBox="0 0 8.55469 16.0938"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="8.554688"
+                height="16.093750"
+                fill="none"
+                customFrame="#000000"
+              >
+                <path
+                  id="Vector"
+                  d="M7.99414 8.98438L8.4375 6.09375L5.66406 6.09375L5.66406 4.21793C5.66406 3.42711 6.05148 2.65625 7.29371 2.65625L8.55469 2.65625L8.55469 0.195312C8.55469 0.195312 7.41031 0 6.31621 0C4.03199 0 2.53906 1.38438 2.53906 3.89063L2.53906 6.09375L0 6.09375L0 8.98438L2.53906 8.98438L2.53906 15.9722C3.0482 16.0521 3.57 16.0938 4.10156 16.0938C4.63312 16.0938 5.15492 16.0521 5.66406 15.9722L5.66406 8.98438L7.99414 8.98438Z"
+                  fill="rgb(0,0,0)"
+                  fill-rule="nonzero"
+                />
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <p class="copyright">
+        © 2026 Personal Knowledge Vault. All rights reserved To Saki Al Amin.
+      </p>
+    </footer>
   </body>
 </html>
